baml_language/crates/baml_tests/snapshots/compiles/parser_statements/baml_tests__compiles__parser_statements__02_parser__assignments.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== SYNTAX TREE ===
SOURCE_FILE
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "simple_assign"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT "let x = 1;"
          KW_LET "let"
          WORD "x"
          EQUALS "="
          INTEGER_LITERAL "1"
          SEMICOLON ";"
        BINARY_EXPR "x = 5"
          WORD "x"
          EQUALS "="
          INTEGER_LITERAL "5"
        SEMICOLON ";"
        RETURN_STMT "return x;"
          KW_RETURN "return"
          WORD "x"
          SEMICOLON ";"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "add_assign"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT "let x = 10;"
          KW_LET "let"
          WORD "x"
          EQUALS "="
          INTEGER_LITERAL "10"
          SEMICOLON ";"
        BINARY_EXPR "x += 5"
          WORD "x"
          PLUS_EQUALS "+="
          INTEGER_LITERAL "5"
        SEMICOLON ";"
        RETURN_STMT "return x;"
          KW_RETURN "return"
          WORD "x"
          SEMICOLON ";"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "sub_assign"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT "let x = 10;"
          KW_LET "let"
          WORD "x"
          EQUALS "="
          INTEGER_LITERAL "10"
          SEMICOLON ";"
        BINARY_EXPR "x -= 3"
          WORD "x"
          MINUS_EQUALS "-="
          INTEGER_LITERAL "3"
        SEMICOLON ";"
        RETURN_STMT "return x;"
          KW_RETURN "return"
          WORD "x"
          SEMICOLON ";"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "mul_assign"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT "let x = 3;"
          KW_LET "let"
          WORD "x"
          EQUALS "="
          INTEGER_LITERAL "3"
          SEMICOLON ";"
        BINARY_EXPR "x *= 4"
          WORD "x"
          STAR_EQUALS "*="
          INTEGER_LITERAL "4"
        SEMICOLON ";"
        RETURN_STMT "return x;"
          KW_RETURN "return"
          WORD "x"
          SEMICOLON ";"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "multi_assign"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT "let a = 1;"
          KW_LET "let"
          WORD "a"
          EQUALS "="
          INTEGER_LITERAL "1"
          SEMICOLON ";"
        LET_STMT "let b = 2;"
          KW_LET "let"
          WORD "b"
          EQUALS "="
          INTEGER_LITERAL "2"
          SEMICOLON ";"
        BINARY_EXPR "a = 10"
          WORD "a"
          EQUALS "="
          INTEGER_LITERAL "10"
        SEMICOLON ";"
        BINARY_EXPR "b = 20"
          WORD "b"
          EQUALS "="
          INTEGER_LITERAL "20"
        SEMICOLON ";"
        RETURN_STMT
          KW_RETURN "return"
          BINARY_EXPR "a + b"
            WORD "a"
            PLUS "+"
            WORD "b"
          SEMICOLON ";"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "assign_in_loop"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT "let sum = 0;"
          KW_LET "let"
          WORD "sum"
          EQUALS "="
          INTEGER_LITERAL "0"
          SEMICOLON ";"
        LET_STMT "let i = 0;"
          KW_LET "let"
          WORD "i"
          EQUALS "="
          INTEGER_LITERAL "0"
          SEMICOLON ";"
        WHILE_STMT
          KW_WHILE "while"
          PAREN_EXPR
            L_PAREN "("
            BINARY_EXPR "i < 5"
              WORD "i"
              LESS "<"
              INTEGER_LITERAL "5"
            R_PAREN ")"
          BLOCK_EXPR
            L_BRACE "{"
            BINARY_EXPR "sum += i"
              WORD "sum"
              PLUS_EQUALS "+="
              WORD "i"
            SEMICOLON ";"
            BINARY_EXPR "i += 1"
              WORD "i"
              PLUS_EQUALS "+="
              INTEGER_LITERAL "1"
            SEMICOLON ";"
            R_BRACE "}"
        SEMICOLON ";"
        RETURN_STMT "return sum;"
          KW_RETURN "return"
          WORD "sum"
          SEMICOLON ";"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "block_with_tail"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          KW_LET "let"
          WORD "x"
          EQUALS "="
          BLOCK_EXPR
            L_BRACE "{"
            LET_STMT "let y = 1;"
              KW_LET "let"
              WORD "y"
              EQUALS "="
              INTEGER_LITERAL "1"
              SEMICOLON ";"
            LET_STMT "let z = 2;"
              KW_LET "let"
              WORD "z"
              EQUALS "="
              INTEGER_LITERAL "2"
              SEMICOLON ";"
            BINARY_EXPR "y + z"
              WORD "y"
              PLUS "+"
              WORD "z"
            R_BRACE "}"
          SEMICOLON ";"
        RETURN_STMT "return x;"
          KW_RETURN "return"
          WORD "x"
          SEMICOLON ";"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "let_no_semicolons"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT "let x = 1"
          KW_LET "let"
          WORD "x"
          EQUALS "="
          INTEGER_LITERAL "1"
        LET_STMT "let y = 2"
          KW_LET "let"
          WORD "y"
          EQUALS "="
          INTEGER_LITERAL "2"
        RETURN_STMT
          KW_RETURN "return"
          BINARY_EXPR "x + y"
            WORD "x"
            PLUS "+"
            WORD "y"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "let_mixed_semicolons"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT "let a = 1;"
          KW_LET "let"
          WORD "a"
          EQUALS "="
          INTEGER_LITERAL "1"
          SEMICOLON ";"
        LET_STMT "let b = 2"
          KW_LET "let"
          WORD "b"
          EQUALS "="
          INTEGER_LITERAL "2"
        LET_STMT "let c = 3;"
          KW_LET "let"
          WORD "c"
          EQUALS "="
          INTEGER_LITERAL "3"
          SEMICOLON ";"
        LET_STMT "let d = 4"
          KW_LET "let"
          WORD "d"
          EQUALS "="
          INTEGER_LITERAL "4"
        RETURN_STMT
          KW_RETURN "return"
          BINARY_EXPR
            BINARY_EXPR
              BINARY_EXPR "a + b"
                WORD "a"
                PLUS "+"
                WORD "b"
              PLUS "+"
              WORD "c"
            PLUS "+"
            WORD "d"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "edge_call_then_parens"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "foo"
        COLON ":"
        TYPE_EXPR
          L_PAREN "("
          R_PAREN ")"
          ARROW "->"
          TYPE_EXPR
            L_PAREN "("
            FUNCTION_TYPE_PARAM
              TYPE_EXPR "int"
                WORD "int"
            R_PAREN ")"
            ARROW "->"
            TYPE_EXPR "int"
              WORD "int"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        CALL_EXPR
          CALL_EXPR
            WORD "foo"
            CALL_ARGS "()"
              L_PAREN "("
              R_PAREN ")"
          CALL_ARGS "(1)"
            L_PAREN "("
            INTEGER_LITERAL "1"
            R_PAREN ")"
        INTEGER_LITERAL "2"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "edge_call_then_index"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "foo"
        COLON ":"
        TYPE_EXPR
          L_PAREN "("
          R_PAREN ")"
          ARROW "->"
          TYPE_EXPR "int[]"
            WORD "int"
            L_BRACKET "["
            R_BRACKET "]"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        INDEX_EXPR
          CALL_EXPR
            WORD "foo"
            CALL_ARGS "()"
              L_PAREN "("
              R_PAREN ")"
          L_BRACKET "["
          INTEGER_LITERAL "0"
          R_BRACKET "]"
        INTEGER_LITERAL "1"
        R_BRACE "}"
  CLASS_DEF
    KW_CLASS "class"
    WORD "EdgeFoo"
    L_BRACE "{"
    FIELD
      WORD "x"
      COLON ":"
      TYPE_EXPR "int"
        WORD "int"
    COMMA ","
    R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "edge_type_then_object"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        FIELD_ACCESS_EXPR
          OBJECT_LITERAL
            WORD "EdgeFoo"
            L_BRACE "{"
            OBJECT_FIELD "x: 1"
              WORD "x"
              COLON ":"
              INTEGER_LITERAL "1"
            R_BRACE "}"
          DOT "."
          WORD "x"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "edge_let_call_then_index"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "bar"
        COLON ":"
        TYPE_EXPR
          L_PAREN "("
          R_PAREN ")"
          ARROW "->"
          TYPE_EXPR "int[]"
            WORD "int"
            L_BRACKET "["
            R_BRACKET "]"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          KW_LET "let"
          WORD "x"
          EQUALS "="
          INDEX_EXPR
            CALL_EXPR
              WORD "bar"
              CALL_ARGS "()"
                L_PAREN "("
                R_PAREN ")"
            L_BRACKET "["
            INTEGER_LITERAL "0"
            R_BRACKET "]"
        WORD "x"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "edge_semicolon_forces_boundary"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "bar"
        COLON ":"
        TYPE_EXPR
          L_PAREN "("
          R_PAREN ")"
          ARROW "->"
          TYPE_EXPR "int[]"
            WORD "int"
            L_BRACKET "["
            R_BRACKET "]"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        CALL_EXPR
          WORD "bar"
          CALL_ARGS "()"
            L_PAREN "("
            R_PAREN ")"
        SEMICOLON ";"
        ARRAY_LITERAL "[0]"
          L_BRACKET "["
          INTEGER_LITERAL "0"
          R_BRACKET "]"
        INTEGER_LITERAL "1"
        R_BRACE "}"

=== ERRORS ===
None
