baml_language/crates/baml_tests/snapshots/compiles/parser_statements/baml_tests__compiles__parser_statements__02_parser__break_continue.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== SYNTAX TREE ===
SOURCE_FILE
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "simple_break"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        WHILE_STMT
          KW_WHILE "while"
          PAREN_EXPR "(true)"
            L_PAREN "("
            KW_TRUE "true"
            R_PAREN ")"
          BLOCK_EXPR
            L_BRACE "{"
            BREAK_STMT "break;"
              KW_BREAK "break"
              SEMICOLON ";"
            R_BRACE "}"
        SEMICOLON ";"
        RETURN_STMT "return 42;"
          KW_RETURN "return"
          INTEGER_LITERAL "42"
          SEMICOLON ";"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "simple_continue"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        WHILE_STMT
          KW_WHILE "while"
          PAREN_EXPR "(true)"
            L_PAREN "("
            KW_TRUE "true"
            R_PAREN ")"
          BLOCK_EXPR
            L_BRACE "{"
            CONTINUE_STMT "continue;"
              KW_CONTINUE "continue"
              SEMICOLON ";"
            R_BRACE "}"
        SEMICOLON ";"
        RETURN_STMT "return 0;"
          KW_RETURN "return"
          INTEGER_LITERAL "0"
          SEMICOLON ";"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "break_in_for"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        FOR_EXPR
          KW_FOR "for"
          L_PAREN "("
          LET_STMT
            PATTERN
              BINDING_PATTERN "let i"
                KW_LET "let"
                WORD "i"
            EQUALS "="
            INTEGER_LITERAL "0"
            SEMICOLON ";"
          BINARY_EXPR "i < 10"
            WORD "i"
            LESS "<"
            INTEGER_LITERAL "10"
          SEMICOLON ";"
          BINARY_EXPR
            WORD "i"
            EQUALS "="
            BINARY_EXPR "i + 1"
              WORD "i"
              PLUS "+"
              INTEGER_LITERAL "1"
          R_PAREN ")"
          BLOCK_EXPR
            L_BRACE "{"
            BREAK_STMT "break;"
              KW_BREAK "break"
              SEMICOLON ";"
            R_BRACE "}"
        SEMICOLON ";"
        RETURN_STMT "return 1;"
          KW_RETURN "return"
          INTEGER_LITERAL "1"
          SEMICOLON ";"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "continue_in_for"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        FOR_EXPR
          KW_FOR "for"
          L_PAREN "("
          LET_STMT
            PATTERN
              BINDING_PATTERN "let i"
                KW_LET "let"
                WORD "i"
            EQUALS "="
            INTEGER_LITERAL "0"
            SEMICOLON ";"
          BINARY_EXPR "i < 10"
            WORD "i"
            LESS "<"
            INTEGER_LITERAL "10"
          SEMICOLON ";"
          BINARY_EXPR
            WORD "i"
            EQUALS "="
            BINARY_EXPR "i + 1"
              WORD "i"
              PLUS "+"
              INTEGER_LITERAL "1"
          R_PAREN ")"
          BLOCK_EXPR
            L_BRACE "{"
            CONTINUE_STMT "continue;"
              KW_CONTINUE "continue"
              SEMICOLON ";"
            R_BRACE "}"
        SEMICOLON ";"
        RETURN_STMT "return 2;"
          KW_RETURN "return"
          INTEGER_LITERAL "2"
          SEMICOLON ";"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "nested_break"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        WHILE_STMT
          KW_WHILE "while"
          PAREN_EXPR "(true)"
            L_PAREN "("
            KW_TRUE "true"
            R_PAREN ")"
          BLOCK_EXPR
            L_BRACE "{"
            WHILE_STMT
              KW_WHILE "while"
              PAREN_EXPR "(true)"
                L_PAREN "("
                KW_TRUE "true"
                R_PAREN ")"
              BLOCK_EXPR
                L_BRACE "{"
                BREAK_STMT "break;"
                  KW_BREAK "break"
                  SEMICOLON ";"
                R_BRACE "}"
            BREAK_STMT "break;"
              KW_BREAK "break"
              SEMICOLON ";"
            R_BRACE "}"
        RETURN_STMT "return 3;"
          KW_RETURN "return"
          INTEGER_LITERAL "3"
          SEMICOLON ";"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "break_with_locals"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        WHILE_STMT
          KW_WHILE "while"
          PAREN_EXPR "(true)"
            L_PAREN "("
            KW_TRUE "true"
            R_PAREN ")"
          BLOCK_EXPR
            L_BRACE "{"
            LET_STMT
              PATTERN
                BINDING_PATTERN "let x"
                  KW_LET "let"
                  WORD "x"
              EQUALS "="
              INTEGER_LITERAL "1"
              SEMICOLON ";"
            IF_EXPR
              KW_IF "if"
              PAREN_EXPR "(true)"
                L_PAREN "("
                KW_TRUE "true"
                R_PAREN ")"
              BLOCK_EXPR
                L_BRACE "{"
                LET_STMT
                  PATTERN
                    BINDING_PATTERN "let y"
                      KW_LET "let"
                      WORD "y"
                  EQUALS "="
                  INTEGER_LITERAL "2"
                  SEMICOLON ";"
                BREAK_STMT "break;"
                  KW_BREAK "break"
                  SEMICOLON ";"
                R_BRACE "}"
            SEMICOLON ";"
            R_BRACE "}"
        SEMICOLON ";"
        RETURN_STMT "return 4;"
          KW_RETURN "return"
          INTEGER_LITERAL "4"
          SEMICOLON ";"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "continue_with_locals"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        WHILE_STMT
          KW_WHILE "while"
          PAREN_EXPR "(true)"
            L_PAREN "("
            KW_TRUE "true"
            R_PAREN ")"
          BLOCK_EXPR
            L_BRACE "{"
            LET_STMT
              PATTERN
                BINDING_PATTERN "let x"
                  KW_LET "let"
                  WORD "x"
              EQUALS "="
              INTEGER_LITERAL "1"
              SEMICOLON ";"
            IF_EXPR
              KW_IF "if"
              PAREN_EXPR "(true)"
                L_PAREN "("
                KW_TRUE "true"
                R_PAREN ")"
              BLOCK_EXPR
                L_BRACE "{"
                LET_STMT
                  PATTERN
                    BINDING_PATTERN "let y"
                      KW_LET "let"
                      WORD "y"
                  EQUALS "="
                  INTEGER_LITERAL "2"
                  SEMICOLON ";"
                CONTINUE_STMT "continue;"
                  KW_CONTINUE "continue"
                  SEMICOLON ";"
                R_BRACE "}"
            SEMICOLON ";"
            R_BRACE "}"
        SEMICOLON ";"
        RETURN_STMT "return 5;"
          KW_RETURN "return"
          INTEGER_LITERAL "5"
          SEMICOLON ";"
        R_BRACE "}"

=== ERRORS ===
None
