baml_language/crates/baml_tests/snapshots/compiles/parser_statements/baml_tests__compiles__parser_statements__02_parser__if_let.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== SYNTAX TREE ===
SOURCE_FILE
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "if_let_type_narrow_int"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          PATTERN
            BINDING_PATTERN
              KW_LET "let"
              WORD "x"
              COLON ":"
              PATTERN
                UNION_PATTERN
                  TYPE_PATTERN
                    TYPE_EXPR "int"
                      WORD "int"
                  PIPE "|"
                  TYPE_PATTERN
                    TYPE_EXPR "string"
                      WORD "string"
          EQUALS "="
          INTEGER_LITERAL "7"
          SEMICOLON ";"
        IF_LET_EXPR
          KW_IF "if"
          LET_STMT
            PATTERN
              BINDING_PATTERN
                KW_LET "let"
                WORD "y"
                COLON ":"
                PATTERN
                  TYPE_PATTERN
                    TYPE_EXPR "int"
                      WORD "int"
            EQUALS "="
            WORD "x"
          BLOCK_EXPR
            L_BRACE "{"
            RETURN_STMT
              KW_RETURN "return"
              BINARY_EXPR "y + 1"
                WORD "y"
                PLUS "+"
                INTEGER_LITERAL "1"
              SEMICOLON ";"
            R_BRACE "}"
        RETURN_STMT
          KW_RETURN "return"
          UNARY_EXPR "-1"
            MINUS "-"
            INTEGER_LITERAL "1"
          SEMICOLON ";"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "if_let_type_narrow_string"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          PATTERN
            BINDING_PATTERN
              KW_LET "let"
              WORD "x"
              COLON ":"
              PATTERN
                UNION_PATTERN
                  TYPE_PATTERN
                    TYPE_EXPR "int"
                      WORD "int"
                  PIPE "|"
                  TYPE_PATTERN
                    TYPE_EXPR "string"
                      WORD "string"
          EQUALS "="
          STRING_LITERAL "hi"
            QUOTE """
            WORD "hi"
            QUOTE """
          SEMICOLON ";"
        IF_LET_EXPR
          KW_IF "if"
          LET_STMT
            PATTERN
              BINDING_PATTERN
                KW_LET "let"
                WORD "y"
                COLON ":"
                PATTERN
                  TYPE_PATTERN
                    TYPE_EXPR "string"
                      WORD "string"
            EQUALS "="
            WORD "x"
          BLOCK_EXPR
            L_BRACE "{"
            RETURN_STMT "return y;"
              KW_RETURN "return"
              WORD "y"
              SEMICOLON ";"
            R_BRACE "}"
        RETURN_STMT
          KW_RETURN "return"
          STRING_LITERAL "fallback"
            QUOTE """
            WORD "fallback"
            QUOTE """
          SEMICOLON ";"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "if_let_with_else"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          PATTERN
            BINDING_PATTERN
              KW_LET "let"
              WORD "x"
              COLON ":"
              PATTERN
                UNION_PATTERN
                  TYPE_PATTERN
                    TYPE_EXPR "int"
                      WORD "int"
                  PIPE "|"
                  TYPE_PATTERN
                    TYPE_EXPR "string"
                      WORD "string"
          EQUALS "="
          STRING_LITERAL "nope"
            QUOTE """
            WORD "nope"
            QUOTE """
          SEMICOLON ";"
        IF_LET_EXPR
          KW_IF "if"
          LET_STMT
            PATTERN
              BINDING_PATTERN
                KW_LET "let"
                WORD "y"
                COLON ":"
                PATTERN
                  TYPE_PATTERN
                    TYPE_EXPR "int"
                      WORD "int"
            EQUALS "="
            WORD "x"
          BLOCK_EXPR
            L_BRACE "{"
            RETURN_STMT "return y;"
              KW_RETURN "return"
              WORD "y"
              SEMICOLON ";"
            R_BRACE "}"
          KW_ELSE "else"
          BLOCK_EXPR
            L_BRACE "{"
            RETURN_STMT
              KW_RETURN "return"
              UNARY_EXPR "-1"
                MINUS "-"
                INTEGER_LITERAL "1"
              SEMICOLON ";"
            R_BRACE "}"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "if_let_with_else_value"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          PATTERN
            BINDING_PATTERN
              KW_LET "let"
              WORD "x"
              COLON ":"
              PATTERN
                UNION_PATTERN
                  TYPE_PATTERN
                    TYPE_EXPR "int"
                      WORD "int"
                  PIPE "|"
                  TYPE_PATTERN
                    TYPE_EXPR "string"
                      WORD "string"
          EQUALS "="
          INTEGER_LITERAL "5"
          SEMICOLON ";"
        LET_STMT
          PATTERN
            BINDING_PATTERN "let result"
              KW_LET "let"
              WORD "result"
          EQUALS "="
          IF_LET_EXPR
            KW_IF "if"
            LET_STMT
              PATTERN
                BINDING_PATTERN
                  KW_LET "let"
                  WORD "y"
                  COLON ":"
                  PATTERN
                    TYPE_PATTERN
                      TYPE_EXPR "int"
                        WORD "int"
              EQUALS "="
              WORD "x"
            BLOCK_EXPR
              L_BRACE "{"
              BINARY_EXPR "y * 2"
                WORD "y"
                STAR "*"
                INTEGER_LITERAL "2"
              R_BRACE "}"
            KW_ELSE "else"
            BLOCK_EXPR "{
    0
  }"
              L_BRACE "{"
              INTEGER_LITERAL "0"
              R_BRACE "}"
          SEMICOLON ";"
        RETURN_STMT "return result;"
          KW_RETURN "return"
          WORD "result"
          SEMICOLON ";"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "if_let_else_if"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          PATTERN
            BINDING_PATTERN
              KW_LET "let"
              WORD "x"
              COLON ":"
              PATTERN
                UNION_PATTERN
                  TYPE_PATTERN
                    TYPE_EXPR "int"
                      WORD "int"
                  PIPE "|"
                  TYPE_PATTERN
                    TYPE_EXPR "string"
                      WORD "string"
                  PIPE "|"
                  TYPE_PATTERN
                    TYPE_EXPR "bool"
                      WORD "bool"
          EQUALS "="
          WORD "true"
          SEMICOLON ";"
        IF_LET_EXPR
          KW_IF "if"
          LET_STMT
            PATTERN
              BINDING_PATTERN
                KW_LET "let"
                WORD "y"
                COLON ":"
                PATTERN
                  TYPE_PATTERN
                    TYPE_EXPR "int"
                      WORD "int"
            EQUALS "="
            WORD "x"
          BLOCK_EXPR
            L_BRACE "{"
            RETURN_STMT "return y;"
              KW_RETURN "return"
              WORD "y"
              SEMICOLON ";"
            R_BRACE "}"
          KW_ELSE "else"
          IF_LET_EXPR
            KW_IF "if"
            LET_STMT
              PATTERN
                BINDING_PATTERN
                  KW_LET "let"
                  WORD "z"
                  COLON ":"
                  PATTERN
                    TYPE_PATTERN
                      TYPE_EXPR "string"
                        WORD "string"
              EQUALS "="
              WORD "x"
            BLOCK_EXPR
              L_BRACE "{"
              RETURN_STMT "return 0;"
                KW_RETURN "return"
                INTEGER_LITERAL "0"
                SEMICOLON ";"
              R_BRACE "}"
            KW_ELSE "else"
            BLOCK_EXPR
              L_BRACE "{"
              RETURN_STMT
                KW_RETURN "return"
                UNARY_EXPR "-1"
                  MINUS "-"
                  INTEGER_LITERAL "1"
                SEMICOLON ";"
              R_BRACE "}"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "if_let_else_if_let_chain"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          PATTERN
            BINDING_PATTERN
              KW_LET "let"
              WORD "x"
              COLON ":"
              PATTERN
                UNION_PATTERN
                  TYPE_PATTERN
                    TYPE_EXPR "int"
                      WORD "int"
                  PIPE "|"
                  TYPE_PATTERN
                    TYPE_EXPR "string"
                      WORD "string"
          EQUALS "="
          STRING_LITERAL "abc"
            QUOTE """
            WORD "abc"
            QUOTE """
          SEMICOLON ";"
        IF_LET_EXPR
          KW_IF "if"
          LET_STMT
            PATTERN
              BINDING_PATTERN
                KW_LET "let"
                WORD "a"
                COLON ":"
                PATTERN
                  TYPE_PATTERN
                    TYPE_EXPR "int"
                      WORD "int"
            EQUALS "="
            WORD "x"
          BLOCK_EXPR
            L_BRACE "{"
            RETURN_STMT "return a;"
              KW_RETURN "return"
              WORD "a"
              SEMICOLON ";"
            R_BRACE "}"
          KW_ELSE "else"
          IF_LET_EXPR
            KW_IF "if"
            LET_STMT
              PATTERN
                BINDING_PATTERN
                  KW_LET "let"
                  WORD "b"
                  COLON ":"
                  PATTERN
                    TYPE_PATTERN
                      TYPE_EXPR "string"
                        WORD "string"
              EQUALS "="
              WORD "x"
            BLOCK_EXPR
              L_BRACE "{"
              RETURN_STMT "return 1;"
                KW_RETURN "return"
                INTEGER_LITERAL "1"
                SEMICOLON ";"
              R_BRACE "}"
            KW_ELSE "else"
            BLOCK_EXPR
              L_BRACE "{"
              RETURN_STMT
                KW_RETURN "return"
                UNARY_EXPR "-2"
                  MINUS "-"
                  INTEGER_LITERAL "2"
                SEMICOLON ";"
              R_BRACE "}"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "if_let_nested"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          PATTERN
            BINDING_PATTERN
              KW_LET "let"
              WORD "outer"
              COLON ":"
              PATTERN
                UNION_PATTERN
                  TYPE_PATTERN
                    TYPE_EXPR "int"
                      WORD "int"
                  PIPE "|"
                  TYPE_PATTERN
                    TYPE_EXPR "string"
                      WORD "string"
          EQUALS "="
          INTEGER_LITERAL "3"
          SEMICOLON ";"
        LET_STMT
          PATTERN
            BINDING_PATTERN
              KW_LET "let"
              WORD "inner"
              COLON ":"
              PATTERN
                UNION_PATTERN
                  TYPE_PATTERN
                    TYPE_EXPR "int"
                      WORD "int"
                  PIPE "|"
                  TYPE_PATTERN
                    TYPE_EXPR "string"
                      WORD "string"
          EQUALS "="
          INTEGER_LITERAL "4"
          SEMICOLON ";"
        IF_LET_EXPR
          KW_IF "if"
          LET_STMT
            PATTERN
              BINDING_PATTERN
                KW_LET "let"
                WORD "a"
                COLON ":"
                PATTERN
                  TYPE_PATTERN
                    TYPE_EXPR "int"
                      WORD "int"
            EQUALS "="
            WORD "outer"
          BLOCK_EXPR
            L_BRACE "{"
            IF_LET_EXPR
              KW_IF "if"
              LET_STMT
                PATTERN
                  BINDING_PATTERN
                    KW_LET "let"
                    WORD "b"
                    COLON ":"
                    PATTERN
                      TYPE_PATTERN
                        TYPE_EXPR "int"
                          WORD "int"
                EQUALS "="
                WORD "inner"
              BLOCK_EXPR
                L_BRACE "{"
                RETURN_STMT
                  KW_RETURN "return"
                  BINARY_EXPR "a + b"
                    WORD "a"
                    PLUS "+"
                    WORD "b"
                  SEMICOLON ";"
                R_BRACE "}"
              KW_ELSE "else"
              BLOCK_EXPR
                L_BRACE "{"
                RETURN_STMT "return a;"
                  KW_RETURN "return"
                  WORD "a"
                  SEMICOLON ";"
                R_BRACE "}"
            R_BRACE "}"
        RETURN_STMT
          KW_RETURN "return"
          UNARY_EXPR "-1"
            MINUS "-"
            INTEGER_LITERAL "1"
          SEMICOLON ";"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "if_let_as_tail_expr"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          PATTERN
            BINDING_PATTERN
              KW_LET "let"
              WORD "v"
              COLON ":"
              PATTERN
                UNION_PATTERN
                  TYPE_PATTERN
                    TYPE_EXPR "int"
                      WORD "int"
                  PIPE "|"
                  TYPE_PATTERN
                    TYPE_EXPR "string"
                      WORD "string"
          EQUALS "="
          INTEGER_LITERAL "10"
          SEMICOLON ";"
        IF_LET_EXPR
          KW_IF "if"
          LET_STMT
            PATTERN
              BINDING_PATTERN
                KW_LET "let"
                WORD "n"
                COLON ":"
                PATTERN
                  TYPE_PATTERN
                    TYPE_EXPR "int"
                      WORD "int"
            EQUALS "="
            WORD "v"
          BLOCK_EXPR "{
    n
  }"
            L_BRACE "{"
            WORD "n"
            R_BRACE "}"
          KW_ELSE "else"
          BLOCK_EXPR
            L_BRACE "{"
            UNARY_EXPR "-1"
              MINUS "-"
              INTEGER_LITERAL "1"
            R_BRACE "}"
        R_BRACE "}"

=== ERRORS ===
None
